[gd_scene load_steps=2 format=3 uid="uid://dgju4lbicu7ve"]

[ext_resource type="Script" uid="uid://2qybnbeuxqmo" path="res://projectiles/components/hurtbox/projectile_hurtbox.gd" id="1_0moux"]

[node name="ProjectileHurtbox" type="Area2D"]
z_index = 1
z_as_relative = false
y_sort_enabled = true
collision_layer = 4
collision_mask = 2
script = ExtResource("1_0moux")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
